# matter-data-model-json-generator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  setup.py
core/: combine_clusters_devices.py  xml_parser.py
source_parser/: attribute_parser.py  cluster_parser.py  command_parser.py  conformance.py  data_type_parser.py  device_parser.py  elements.py  event_parser.py  feature_parser.py  serializers.py  yaml_parser.py
tests/: __init__.py  test_basic_functionality.py
utils/: attribute_type.py  base_elements.py  config.py  file_utils.py  helper.py  logger.py  mapping.py
